# portfolio-risk-backtesting-toolkit

./: .env.example  .gitignore  README.md  claude_backtesting_toolkit_prompt.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: portfolio_weights.yaml  settings.yaml  stress_scenarios.yaml  universe.yaml
data/sample/: generate_demo_data.py
scripts/: build_demo_outputs.py  discover_candidates.py  run_backtest.py  validate_universe.py
src/analytics/: benchmark.py  contributions.py  correlation.py  drawdown.py  performance.py  returns.py  risk.py  rolling.py  var_es.py
src/data/: cleaner.py  discovery.py  loader.py  lseg_session.py  mapping.py
src/portfolio/: construction.py  integrity.py  rebalancing.py  turnover.py  weights.py
src/reporting/: charts.py  export.py  manifest.py  tables.py  tearsheet.py
src/stress/: historical.py  scenarios.py  shocks.py
src/utils/: logging_utils.py  validation.py
tests/: test_benchmark.py  test_cleaner_report.py  test_drawdown.py  test_integrity.py  test_manifest.py  test_portfolio.py  test_returns.py  test_stress.py  test_var_es.py
